test/fixtures/analyze-player-error2-utf8.txt
node : file:///C:/Users/trinm/Documents/GitHub/DoublesQueueMaster/scripts/analyze-player-rating-path.mjs:274
At line:1 char:1
+ node scripts/analyze-player-rating-path.mjs > test/fixtures/analyze-p ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (file:///C:/User...ng-path.mjs:274:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
      `${dateStr} ${matchIdStr} ${typeStr} ${e.score.padEnd(7)} ${e.out.padEnd(4)} ${String(e.before).padStart(6)} ${changeStr.padStart(6)} ${String(e.after).padStart(6)} ${String(e.teamRating.toFixed(0)).padStart(6)} 
${String(e.oppRating.toFixed(0)).padStart(6)} ${String(e.pool).padStart(5)} ${(e.expectedW * 100).toFixed(1).padStart(6)}%`,
                                                                        ^

TypeError: Cannot read properties of undefined (reading 'padEnd')
    at file:///C:/Users/trinm/Documents/GitHub/DoublesQueueMaster/scripts/analyze-player-rating-path.mjs:274:73
    at ModuleJob.run (node:internal/modules/esm/module_job:329:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.17.0
